(bug) Homepage not showing image on small screen

--- a/public/assets/css/fookup.css
+++ b/public/assets/css/fookup.css
@@ -237,7 +237,7 @@ i.scroll:hover {
 @media (max-width: 768px) {
 
   .header {
-    background: url(../goicuon-lores.png) no-repeat center center scroll;
+    background: url(../goicuon-lores.jpg) no-repeat center center scroll;
   }
 
   .callout {
